<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <FrameLayout
        android:id="@+id/flToolbarContainer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_with_logo_height"
        android:animateLayoutChanges="true"
        android:background="?attr/colorPrimary"
        android:elevation="6dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:titleTextAppearance="@style/RobotoBoldWhiteXLargeTextStyle"/>

        <TextView
            android:id="@+id/ivTitle"
            style="@style/RobotoRegularWhiteXXXXXLargeTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"/>

    </FrameLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/flToolbarContainer"
        android:fillViewport="true"
        tools:ignore="UnknownIdInLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <android.support.v7.widget.CardView
                android:id="@+id/cvPasswordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_container_height">

                    <ImageView
                        android:layout_width="@dimen/image_size_24"
                        android:layout_height="@dimen/image_size_24"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="20dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_mail_24dp"
                        tools:ignore="ContentDescription"/>

                    <EditText
                        android:id="@+id/etEmail"
                        style="@style/RobotoRegularCharcoalXSmallTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@android:color/transparent"
                        android:hint="@string/login_hint_email"
                        android:inputType="textEmailAddress"
                        android:maxLength="@integer/max_email_length"
                        android:paddingStart="60dp"
                        android:paddingTop="15dp"
                        android:paddingEnd="15dp"
                        android:paddingBottom="15dp"/>

                </FrameLayout>

            </android.support.v7.widget.CardView>

            <TextView
                style="@style/RobotoRegularCharcoal9AXXXSmallTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/info_reset_password"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_bottom_height"
                android:background="@color/bg_darkCerulean">

                <TextView
                    android:id="@+id/tvSubmit"
                    style="@style/RobotoRegularWhiteXSmallTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/password_submit"
                    android:textAllCaps="true"
                    tools:ignore="KeyboardInaccessibleWidget"/>

            </FrameLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>