<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/flToolbarContainer"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="6dp">

        <TextView
            android:id="@+id/ivTitle"
            style="@style/RobotoRegularWhiteXXXXXLargeTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"/>

    </FrameLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/flPrivacyPolicy"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_container_height"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                tools:ignore="KeyboardInaccessibleWidget">

                <TextView
                    style="@style/RobotoRegularCharcoalXSmallTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:text="@string/privacy_policy_button"/>

                <ImageView
                    android:layout_width="@dimen/image_size_24"
                    android:layout_height="@dimen/image_size_24"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="5dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_arrow_right_24dp"
                    tools:ignore="ContentDescription"/>

            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_line_divider"
                android:layout_marginStart="16dp"
                android:background="@color/bg_black_1f"/>

            <FrameLayout
                android:id="@+id/flTermsOfUse"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_container_height"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                tools:ignore="KeyboardInaccessibleWidget">

                <TextView
                    style="@style/RobotoRegularCharcoalXSmallTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:text="@string/terms_of_use_button"/>

                <ImageView
                    android:layout_width="@dimen/image_size_24"
                    android:layout_height="@dimen/image_size_24"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="5dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_arrow_right_24dp"
                    tools:ignore="ContentDescription"/>

            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_line_divider"
                android:layout_marginStart="16dp"
                android:background="@color/bg_black_1f"/>

            <FrameLayout
                android:id="@+id/flGiveUsFeedback"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_container_height"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                tools:ignore="KeyboardInaccessibleWidget">

                <TextView
                    style="@style/RobotoRegularCharcoalXSmallTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:text="@string/give_us_feedback_button"/>

                <ImageView
                    android:layout_width="@dimen/image_size_24"
                    android:layout_height="@dimen/image_size_24"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="5dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_arrow_right_24dp"
                    tools:ignore="ContentDescription"/>

            </FrameLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>